Fix text overflow

--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,12 @@
     transform: rotate(360deg);
   }
 }
+
+.text-ellipsis--2{
+  text-overflow:ellipsis;
+  overflow:hidden;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+}
